@@ -137,6 +137,8 @@ set fullurl http://user:pass@[info hostname]:$port/a/b/c
 set binurl //[info hostname]:$port/binary
 set posturl //[info hostname]:$port/post
 set badposturl //[info hostname]:$port/droppost
+set badcharurl //%user@[info hostname]:$port/a/^b/c
+
 test http-3.4 {http::geturl} {
     set token [http::geturl $url]
     http::data $token
@@ -313,23 +315,34 @@ test http-3.18 {http::geturl parse failures} -body {
     http::geturl http://somewhere:123456789/
 } -returnCodes error -result {Invalid port number: 123456789}
 test http-3.19 {http::geturl parse failures} -body {
+    set ::http::strict 1
     http::geturl http://{user}@somewhere
 } -returnCodes error -result {Illegal characters in URL user}
 test http-3.20 {http::geturl parse failures} -body {
+    set ::http::strict 1
     http::geturl http://%user@somewhere
 } -returnCodes error -result {Illegal encoding character usage "%us" in URL user}
 test http-3.21 {http::geturl parse failures} -body {
+    set ::http::strict 1
     http::geturl http://somewhere/{path}
 } -returnCodes error -result {Illegal characters in URL path}
 test http-3.22 {http::geturl parse failures} -body {
+    set ::http::strict 1
     http::geturl http://somewhere/%path
 } -returnCodes error -result {Illegal encoding character usage "%pa" in URL path}
 test http-3.23 {http::geturl parse failures} -body {
+    set ::http::strict 1
     http::geturl http://somewhere/path?{query}
 } -returnCodes error -result {Illegal characters in URL path}
 test http-3.24 {http::geturl parse failures} -body {
+    set ::http::strict 1
     http::geturl http://somewhere/path?%query
 } -returnCodes error -result {Illegal encoding character usage "%qu" in URL path}
+test http-3.25 {http::geturl parse failures} -body {
+    set ::http::strict 0
+    set token [http::geturl $badcharurl]
+    http::cleanup $token
+} -returnCodes ok -result {}
 
 test http-4.1 {http::Event} {
     set token [http::geturl $url]
